# rifleman

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
config/: format.conf  image.conf  lint.conf
rifleman/: __init__.py  __main__.py
